--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -138,7 +138,8 @@
     "ZombieVillager": true,
     "Illusioner": true,
     "BoulderingDrowned": true,
-    "EntitySkreecher": true
+    "EntitySkreecher": true,
+    "Husk": true
   },
   "entitiesalwaysinfernal": {
     "LobberZombie": false,
@@ -185,7 +186,8 @@
     "ZombieVillager": false,
     "Illusioner": false,
     "BoulderingDrowned": false,
-    "EntitySkreecher": false
+    "EntitySkreecher": false,
+    "Husk": false
   },
   "entitybasehealth": {
     "Zombie": 20.0,
@@ -213,6 +215,9 @@
     "Evoker": 24.0,
     "NightmareEntity": 45.0,
     "Witch": 26.0,
-    "CorruptedVindicator": 24.0
+    "CorruptedVindicator": 24.0,
+    "Husk": 40.0,
+    "ZombieVillager": 20.0,
+    "NeutralCreeper": 25.0
   }
 }
